# CodeSentinel

./: CMakeLists.txt  README.md
src/: main.cpp
src/gui/: MainWindow.cpp  MainWindow.h
src/xss/: XSSDetector.cpp  XSSDetector.h
tests/: xss.test.html
